{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 132,
  "lineage": "06a7af97-fbd7-843f-784c-7e64f36fb3cb",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_server_nic",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-server-00-nic",
            "ip_configuration": [
              {
                "name": "web-ip",
                "primary": true,
                "private_ip_address": "1.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-00-public-ip",
                "subnet_id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet"
              }
            ],
            "location": "westus2",
            "name": "web-server-00-nic",
            "private_ip_address": "1.0.1.5",
            "private_ip_addresses": [
              "1.0.1.5"
            ],
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_public_ip.web_server_public_ip",
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet",
            "azurerm_virtual_network.web_server_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-server-01-nic",
            "ip_configuration": [
              {
                "name": "web-ip",
                "primary": true,
                "private_ip_address": "1.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-01-public-ip",
                "subnet_id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet"
              }
            ],
            "location": "westus2",
            "name": "web-server-01-nic",
            "private_ip_address": "1.0.1.4",
            "private_ip_addresses": [
              "1.0.1.4"
            ],
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_public_ip.web_server_public_ip",
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet",
            "azurerm_virtual_network.web_server_vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-server-02-nic",
            "ip_configuration": [
              {
                "name": "web-ip",
                "primary": true,
                "private_ip_address": "1.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-02-public-ip",
                "subnet_id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet"
              }
            ],
            "location": "westus2",
            "name": "web-server-02-nic",
            "private_ip_address": "1.0.1.6",
            "private_ip_addresses": [
              "1.0.1.6"
            ],
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_public_ip.web_server_public_ip",
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-sg",
            "location": "westus2",
            "name": "web-server-sg",
            "resource_group_name": "web-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_ssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-sg/securityRules/web-server-ssh",
            "name": "web-server-ssh",
            "network_security_group_name": "web-server-sg",
            "priority": 100,
            "protocol": "tcp",
            "resource_group_name": "web-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_public_ip",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-00-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-00-public-ip",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-01-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-01-public-ip",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-02-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-02-public-ip",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet",
            "name": "web-server-subnet",
            "resource_group_name": "web-rg",
            "virtual_network_name": "web-server-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_server_subnet_nsg_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet",
            "network_security_group_id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-sg",
            "subnet_id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "id": "/subscriptions/8daa45fb-249f-4801-b4df-419b890ead67/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet",
            "location": "westus2",
            "name": "web-server-vnet",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    }
  ]
}